clusters/cl01tl/manifests/navidrome/HTTPRoute-navidrome-feishin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome-feishin
  labels:
    app.kubernetes.io/instance: navidrome
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: navidrome
    helm.sh/chart: navidrome-5.3.0
  namespace: navidrome
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "feishin.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: navidrome-feishin
          namespace: navidrome
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
